[gd_scene load_steps=4 format=3 uid="uid://ds0rg0pmx124r"]

[ext_resource type="Script" path="res://inventory-system/items (scenes)/speed_potion/speed_potion.gd" id="1_uevjh"]
[ext_resource type="Texture2D" uid="uid://bqc653sec01sg" path="res://assets/inv-items/tile082.png" id="1_yninh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rey3d"]
size = Vector2(12, 29)

[node name="SpeedPotion" type="Node2D"]
script = ExtResource("1_uevjh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_yninh")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_rey3d")

[node name="Timer" type="Timer" parent="."]
wait_time = 15.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
